# CNCGeneralsD3D12

./: CMakeLists.txt  CMakePresets.json
Core/GameEngine/Include/Common/: GameDefines.h
Core/GameEngine/Include/GameClient/: GameWindow.h
Core/GameEngine/Include/GameLogic/: AIPathfind.h
Core/GameEngine/Source/Common/System/: Debug.cpp  File.cpp  GameMemory.cpp
Core/GameEngine/Source/GameClient/System/: ParticleSys.cpp
Core/GameEngine/Source/GameNetwork/: ConnectionManager.cpp  GameInfo.cpp
Core/GameEngineDevice/: CMakeLists.txt
Core/GameEngineDevice/Include/MilesAudioDevice/: MilesAudioManager.h
Core/GameEngineDevice/Include/W3DDevice/GameClient/: W3DSmudge.h  W3DTreeBuffer.h
Core/GameEngineDevice/Source/MilesAudioDevice/: MilesAudioManager.cpp
Core/GameEngineDevice/Source/VideoDevice/Bink/: BinkVideoPlayer.cpp
Core/GameEngineDevice/Source/W3DDevice/GameClient/: W3DShaderManager.cpp
Core/GameEngineDevice/Source/Win32Device/Common/: Win32BIGFileSystem.cpp
Core/Libraries/Source/WWVegas/: CMakeLists.txt
Core/Libraries/Source/WWVegas/WW3D2/: texture.cpp  textureloader.cpp
Core/Libraries/Source/WWVegas/WWAudio/: AudibleSound.h  SoundBuffer.h  WWAudio.h
Core/Libraries/Source/WWVegas/WWLib/: Except.cpp
Core/Libraries/Source/debug/: debug_debug.cpp  debug_except.cpp  debug_stack.cpp
GeneralsMD/Code/GameEngine/Include/GameClient/: Shadow.h
GeneralsMD/Code/GameEngine/Source/Common/: Dict.cpp  GameEngine.cpp  version.cpp
GeneralsMD/Code/GameEngine/Source/Common/System/: StackDump.cpp
GeneralsMD/Code/GameEngine/Source/GameLogic/System/: GameLogic.cpp
GeneralsMD/Code/GameEngineDevice/Source/W3DDevice/GameClient/: W3DParticleSys.cpp
GeneralsMD/Code/GameEngineDevice/Source/W3DDevice/GameClient/Shadow/: W3DShadow.cpp
GeneralsMD/Code/Libraries/Source/WWVegas/: CMakeLists.txt
GeneralsMD/Code/Libraries/Source/WWVegas/WW3D2/: ddsfile.cpp  ddsfile.h  dx8caps.cpp  dx8renderer.cpp  dx8wrapper.cpp
GeneralsMD/Code/Main/: CMakeLists.txt  WinMain.cpp
GeneralsMD/Code/Tools/W3DView/: CMakeLists.txt
bridge/: cmakelists.txt  d3d8.cpp  d3d8_bridge.h  d3d8_guids.cpp  d3d8types.h  d3d8x.cpp  gl_d3d12raylight.cpp  gl_d3d12shim.cpp  gl_d3d12wgl.cpp  miles_openal.cpp  mss.h  opengl.h  win32.cpp
